@@ -6,5 +6,14 @@
 
 typedef  void (*STREAM_CALLBACK_FUNCTION)(void *pBuf, unsigned size,  epicsTimeStamp time, void *usr);
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+int registerStreamCallback(const char *portName, const int stream_channel, void *cb_func, void *cb_usr);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif   /* _DEBUG_STREAM_INTERFACE_H */
